# coin98-dollar-mint-burn-sol

./: .editorconfig  README.md  package.json
contracts/: Coin98DollarMintBurn.sol
evm/contracts/: Coin98DollarMintBurn.sol
programs/coin98_dollar_mint_burn/src/: constant.rs  error.rs
programs/coin98_dollar_mint_burn/tests/utils/: chainlink.rs
services/: cusd_factory.service.ts
solana/: .gitignore  package.json  readme.md
solana/programs/coin98_dollar_mint_burn/: Cargo.toml
solana/programs/coin98_dollar_mint_burn/src/: constant.rs  context.rs  error.rs  event.rs  lib.rs  state.rs
solana/programs/coin98_dollar_mint_burn/tests/: burner.rs  minter.rs
solana/programs/coin98_dollar_mint_burn/tests/utils/: chainlink.rs  helper.rs  instructions.rs  mod.rs
solana/services/: cusd_factory.service.ts  cusd_factory_instruction.service.ts  index.ts
solana/test/: cusd_factory.spec.ts
test/: coin98_dollar_mint_burn.keypair.json
